0.003 - 08 Jan 2018

 - remove ULOC_REQUESTED_LOCALE, this was deprecated and removed by
   libicu. (cpan #124946)

 - if your version of ICU is recent enough, collation now uses
   ucol_strcollUTF8() instead ucol_strcollIter().  Since this fetches
   the UTF8 form of a SV, this may upgrade supplied SVs to a UTF-8
   representation.

0.002 - 02 Feb 2012

 - fix the content of the NAME section, Unicode was spelled incorrectly.
   https://rt.cpan.org/Ticket/Display.html?id=73960

 - adjust failure message when we can't find icu-config to indicate an
   unsupported platform (ie. one without libicu) rather than some
   generic unknown issue.

 - set a minimum perl version of 5.8.8.

0.001 - 22 Sep 2011

 - initial release